Fix #7 As a user I want to be able to create stages

--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -4,5 +4,12 @@
       "GainNode": "Volume",
       "OscillatorNode": "Oscillator"
     }
+  },
+  "stages": {
+    "creation": {
+      "fields": {
+        "name": "Entrez un nom pour la nouvelle scène"
+      }
+    }
   }
 }
