Fix #5 add the possibility to connect nodes when links exist

--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -2,7 +2,8 @@
   "nodes": {
     "types": {
       "GainNode": "Volume",
-      "OscillatorNode": "Oscillator"
+      "OscillatorNode": "Oscillator",
+      "output": "Output"
     }
   },
   "stages": {
