As a user I want to be able to modify parameters of nodes

--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -2,8 +2,16 @@
   "nodes": {
     "types": {
       "GainNode": "Volume",
-      "OscillatorNode": "Oscillator",
-      "output": "Output"
+      "OscillatorNode": "Oscillateur",
+      "OutputNode": "Sortie"
+    }
+  },
+  "params": {
+    "titles": {
+      "unknown": "Inconnu",
+      "gain": "Volume",
+      "frequency": "Fréquence",
+      "detune": "Désaccord"
     }
   },
   "stages": {
