Add the merger node and test multi-ports

--- a/src/locales/fr_FR.json
+++ b/src/locales/fr_FR.json
@@ -3,7 +3,8 @@
     "types": {
       "GainNode": "Volume",
       "OscillatorNode": "Oscillateur",
-      "OutputNode": "Sortie"
+      "OutputNode": "Sortie",
+      "ChannelMergerNode": "Assembleur"
     }
   },
   "params": {
